Add user accounts with Devise

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,22 +11,26 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="field form-group">
     <%= form.label :title %>
-    <%= form.text_field :title, id: :post_title %>
+    <%= form.text_field :title, id: :post_title, class: 'form-control' %>
   </div>
 
-  <div class="field">
-    <%= form.label :author %>
-    <%= form.text_field :author, id: :post_author %>
-  </div>
+   <!-- <div class="field form-group"> -->
+    <!-- <%#= form.label :author %> -->
+    <!--<%#= form.text_field :author, id: :post_author, class: 'form-control' %>
+  <!-- </div> -->
 
   <div class="field">
+    <% form.hidden_field :user_id, value: current_user.id %>
+  </div>
+
+  <div class="field form-group">
     <%= form.label :blog_entry %>
-    <%= form.text_area :blog_entry, id: :post_blog_entry %>
+    <%= form.text_area :blog_entry, id: :post_blog_entry, class: 'form-control' %>
   </div>
 
-  <div class="actions">
-    <%= form.submit %>
+  <div class="actions form-group">
+    <%= form.submit(class: 'btn btn-success') %>
   </div>
 <% end %>
