--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,15 @@
-<h1>Editing Post</h1>
+<div style="font-family: 'Raleway', 'sans-serif'; font-size: 16px; padding-left: 20px; padding-right: 20px, padding-top: 20px;">
 
-<%= render 'form', post: @post %>
+  <h1>Editing Post</h1>
 
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+  <%= render 'form', post: @post %>
+
+  <!-- before bootstrap -->
+  <!-- <%= link_to 'Show', @post %> | -->
+  <!-- <%= link_to 'Back', posts_path %> -->
+
+  <!-- after bootstrap -->
+  <%= link_to 'Show', @post, class: "btn btn-primary navbar-btn" %>
+  <%= link_to 'Back', posts_path, class: "btn btn-primary navbar-btn" %>
+
+</div>
