--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,13 +1,19 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Posts</h1>
+<!-- <h1>Posts</h1> -->
 
-<table>
+<div class="panel panel-default" style="font-size: 16px; padding-left: 20px; padding-right: 20px; padding-top: 20px;">
+  <!-- Default panel contents -->
+  <div class="panel-heading" style="font-family: 'Raleway', 'sans-serif';">
+    <h1>My Blog</h1>
+
+<table class="table table-striped table-hover well well-lg">
   <thead>
     <tr>
-      <th>Title</th>
-      <th>Author</th>
-      <th>Blog entry</th>
+      <th><h3>Title</h3></th>
+      <th><h3>Author</h3></th>
+      <th><h3>Blog Entry</h3></th>
+      <th><h3>Last Updated</h3></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,16 +22,26 @@
     <% @posts.each do |post| %>
       <tr>
         <td><%= post.title %></td>
-        <td><%= post.author %></td>
+        <!-- <td><%= post.author %></td> -->
+        <td><%= post.user.try(:email) %></td>
         <td><%= post.blog_entry %></td>
-        <td><%= link_to 'Show', post %></td>
+        <!-- <td><%= post.updated_at.to_formatted_s(:db) %></td> -->
+        <td><%= post.updated_at.strftime("%m-%d-%Y %H:%M:%S") %></td>
+        <!-- before bootstrap -->
+<!--         <td><%= link_to 'Show', post %></td>
         <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td> -->
+        <!-- after adding bootstrap -->
+        <td><%= link_to 'Show', post, class: "btn btn-primary" %></td>
+        <td><%= link_to 'Edit', edit_post_path(post), class: "btn btn-primary" %></td>
+        <td><%= link_to 'Destroy', post, class: "btn btn-primary", method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
+</div>
 <br>
 
-<%= link_to 'New Post', new_post_path %>
+<!-- <%= link_to 'New Post', new_post_path %> -->
+<%= link_to 'New Post', new_post_path, class: "btn btn-primary" %>
