--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,5 +1,23 @@
-<h1>New Post</h1>
+<!-- <div style="font-family: 'Raleway', 'sans-serif'; font-size: 16px; padding-left: 20px; padding-right: 20px, padding-top: 20px;">
 
-<%= render 'form', post: @post %>
+  <h1>New Post</h1>
 
-<%= link_to 'Back', posts_path %>
+  <%#= render 'form', post: @post %>
+
+  <!-- <%#= link_to 'Back', posts_path %> -->
+  <!-- <%#= link_to 'Back', posts_path, class: "btn btn-primary navbar-btn" %>
+
+<!-- </div> -->
+
+<div class="container-fluid" style="font-family: 'Raleway', 'sans-serif'; font-size: 16px;>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3
+                  col-sm-8 col-md-offset-2
+                  col-xs-10 col-xs-offset-1">
+        <h1>New Post</h1>
+
+        <%= render 'form', post: @post %>
+        <%= link_to 'Back', posts_path, class: "btn btn-primary navbar-btn" %>
+      </div>
+    </div>
+</div>
